--- a/CourseLibrary/CourseLibrary.API/CourseLibrary.API.csproj
+++ b/CourseLibrary/CourseLibrary.API/CourseLibrary.API.csproj
@@ -18,11 +18,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EmbeddedAssets\index.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="EmbeddedAssets\index.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
-     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.0.0" />
-     <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="3.0.0-preview3-19153-02" />
+     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.0" />
+     <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.6" />
+     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
      <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
